# B.B.K-TG-bot

./: .env.example  README.md  pyproject.toml
.pytest_cache/: .gitignore
.pytest_cache/v/cache/: nodeids
bot/: __init__.py  config.py  context.py  filters.py  main.py  states.py
bot/handlers/: __init__.py  cart_like_selection.py  catalog_browse.py  delivery_payment.py  partners.py  start.py  support_feedback.py  wizard_picker.py
bot/keyboards/: catalog.py  common.py
bot/middlewares/: rate_limit.py
bot/services/: export.py  inventory_port.py  inventory_stub.py  pricing_port.py  pricing_stub.py  selection_store.py  text_templates.py  wizard_memory.py
bot/utils/: formatting.py
data/: catalog.json  company.json  delivery.md  faq.md  styles.yaml
tests/: test_picker.py
tmp/: selection_6626636505.json
